# foundation

./: CMakeLists.txt  README.md  mpp_module.json
mozart++/mpp_foundation/: any.hpp  iterator_range.hpp  memory.hpp
tests/: benchmark-any.cpp  test-iterator_range.cpp  test-looper.cpp
